--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="half-width single-experience" id="stack-2">
         <h2>Front End Web designer</h2>
-        <h3 class="orange-highlight">2021-Present | Pro Level Developer</h3>
+        <h3 class="orange-highlight">2020-2021 | Pro Level Developer</h3>
         <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
     </div>
 
