--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>motiur Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Viaoda+Libre&display=swap" rel="stylesheet">
 </head>
 <body>
     
- <section>
+ <section class="top-banner">
  <div class="half-width">
  <h1>Welcome To</h1>
- <h2><span class="name-highlight">Motiur Portfolio</span> World</h2>
+ <h2><span class="orange-highlight">Motiur Portfolio</span> World</h2>
  <h3>I am a proffessional web designer.</h3>
- <p style="font-size: 15px;">Hello! My name is Md motiur rahman.I am a web Developer.I have a diveres set of skills,ranging from design,to HTML + CSS + jpg to html +JAVA Script.I am working remotely on project for clints all over the world. </p>
- <a href="https://www.linkedin.com/in/motiur-rahman-31a1b1b8/">HIRE ME</a>
+ <p>Hello! My name is Md motiur rahman.I am a web Developer.I have a diveres set of skills,ranging from design,to HTML + CSS + jpg to html +JAVA Script.I am working remotely on project for clints all over the world. </p>
+ <a class="link" target="_blank" href="https://www.linkedin.com/in/motiur-rahman-31a1b1b8/">HIRE ME</a>
  </div>
  <div class="half-width">
      <img src="images/profile1.png" alt="">
@@ -22,5 +23,37 @@
  </div>
  
  </section>
+
+<section class="biography-section">
+    <div class="half-width">
+        <img src="images/profile2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Biography</h2>
+        <h3>Web design and Developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics. </p>
+        <a class="link" target="_blank" href="https://www.linkedin.com/in/motiur-rahman-31a1b1b8/">DOWNLOAD RESUME</a>
+    </div>
+</section>
+
+<section class="experience-section">
+   <h2>Experience</h2>
+    <div class="half-width single-experience" id="stack-1">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-highlight">2021-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+    </div>
+    <div class="half-width single-experience" id="stack-2">
+        <h2>Front End Web designer</h2>
+        <h3 class="orange-highlight">2021-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+
+</section>
+<footer>
+    <p>copyright&#169;Heaven-it. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
