--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
     </div>
 
 </section>
+<section class="contact-section">
+        <div class="half-width">
+                <h4>Comment Us:</h4>
+                <textarea name="comments" id="c-area" cols="40" rows="5"></textarea>
+        </div>
+                
+        <div class="half-width">
+                <h4>Leave in message:</h4>
+                <h5>motiurgreenpower@gmail.com</h5>
+
+
+        </div>
+
+
+</section>
+
+
 <footer>
     <p>copyright&#169;Heaven-it. All rights reserved.</p>
 </footer>
